testutils/test/generated_ingresses/example_with_annotations_coffee.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers 'Request-Id: $req_id';
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "8"
    nginx.ingress.kubernetes.io/proxy-next-upstream: error
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "9"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "5"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-ssl-name: example.com
    nginx.ingress.kubernetes.io/proxy-ssl-secret: default/example-secret
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify-depth: "2"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "false"
    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
    nginx.ingress.kubernetes.io/session-cookie-name: example-cookie
    nginx.ingress.kubernetes.io/session-cookie-path: /example
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: example-coffee-svc-coffee
  namespace: default
spec:
  rules:
    - host: xmpl.com
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 8080
            path: /coffee
  tls:
    - hosts:
        - xmpl.com
      secretName: xmpl-secret
